[package]
name = "pothole"
version = "0.1.1"
authors = ["Martin Wallace <martin.v.wallace@ieee.org>"]
repository = "https://github.com/marty-Wallace/Pothole.git"
license = "MIT"
readme = "README.md"
description = "Some simple image processing functions for detecting potholes"

[dependencies]
rayon = "0.6.0"
clap = "2.22.2"
clt = "*"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"
